--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: rgb(0, 0, 0) !important; 
+    background-color: rgb(0, 0, 0) !important; 
     color: rgb(188, 194, 195) !important;
 }
 /*
@@ -11,4 +11,18 @@ HERO SECTION
   background-image: url("img/re4\ header\ image\ .jpeg");
   background-position: center;
   background-size: cover;
+}
+
+/*
+=================================================
+2/3 1/3 SECTION
+=================================================
+*/
+
+.bg-grey{
+  background-color: rgb(136, 135, 135);
+}
+
+.bg-dark-grey{
+  color: rgb(0, 0, 0);
 }
